update spring boot to version 3.1